# n-queens

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  board.cpp  board.h  chromosone.cpp  chromosone.h  genetic.cpp  genetic.h
include/: board.h  chromosone.h
src/: backtrack.cpp  board.cpp  chromosone.cpp  genetic.cpp  min_conflict.cpp
tests/: board_tests.cpp  chromosone_tests.cpp
